<resources>
    <string name="app_name">GongDam</string>
    <string name="kakao_app_key">f61f38dc787b94c57b088ad75bd96acf</string>
    <string name="gongGanEul_Damda">공간을담다</string>
    <string name="sign_up">회원가입</string>
    <string name="login">로그인</string>
    <string name="login_plz">로그인을 해주세요</string>
    <string name="id">아이디</string>
    <string name="nickname">닉네임</string>
    <string name="origin_pw">기존 비밀번호</string>
    <string name="pwd">비밀번호</string>
    <string name="new_pwd">새 비밀번호</string>
    <string name="pwd_confirm">비밀번호 확인</string>
    <string name="cacao_talk_login">카카오톡으로 시작하기</string>
    <string name="naver_login">네이버로 시작하기</string>
    <string name="find_id">아이디 찾기</string>
    <string name="find_pw">비밀번호 찾기</string>
    <string name="still_login">로그인 유지</string>
    <string name="you_have_to_agree">개인정보 취급 방침 및 서비스 이용약관 동의</string>
    <string name="not_now_member">아직 회원이 아니신가요?</string>
    <string name="login_page_description1">모든 사람들의 추억을\n\n공간을 통해 간직한다는 의미,\n\n공간을 담다.</string>
    <string name="self_confirm">본인인증</string>
    <string name="enrolled_email">가입시 등록한 이메일 주소</string>
    <string name="name">이름</string>
    <string name="birthday_6">생년월일 6자리</string>
    <string name="find_pw_page_check1">통신사/본인확인 서비스 이용약관</string>
    <string name="find_pw_page_check2">모두 동의 및 인증요청 (필수)</string>
    <string name="find_pw_page_must1">[필수] 개인정보 수집/이용</string>
    <string name="find_pw_page_must2">[필수] 통신사 이용약관</string>
    <string name="find_pw_page_must3">[필수] 고유식별정보처리</string>
    <string name="find_pw_page_must4">[필수] 서비스이용약관</string>
    <string name="confirm_request">인증요청</string>
    <string name="home">홈</string>
    <string name="gongdam_search">공간찾기</string>
    <string name="customer_center">고객센터</string>
    <string name="gongdam_promotion">공담특가</string>
    <string name="gongdam_popular">인기공간</string>
    <string name="gongdam_guide">공담 가이드</string>
    <string name="gongdam_guide_search_1">촬영장소 찾기</string>
    <string name="gongdam_guide_search_2">렌탈스튜디오부터\n카페, 펜션, 단독주택까지\n\n\n나에게 맞는 촬영 공간은?</string>
    <string name="gongdam_guide_enroll_1">공간 등록</string>
    <string name="gongdam_guide_enroll_2">공간이 있는 누구나\n촬영장소로 제공할 수\n있습니다.\n\n공간 나눔 시작하기</string>
    <string name="gongdam_guide_etiquette_1">공간 대여 에티켓</string>
    <string name="gongdam_guide_etiquette_2">깔끔한 뒷정리는 기본\n예약시간 준수!\n\n\n올바른 공간 이용 방법</string>
    <string name="gongdam_guide_tip_1">촬영 꿀TIP</string>
    <string name="gongdam_guide_tip_2">이것만 알면\n퀄리티 100% 보장\n\n\n사진/영상 촬영 노하우</string>
    <string name="main_page_bottom_1">회사소개</string>
    <string name="main_page_bottom_2">개인정보취급방침</string>
    <string name="main_page_bottom_3">서비스이용약관</string>
    <string name="main_page_bottom_4">고객센터</string>
    <string name="main_page_bottom_5">상호명 : 에텔\n\n
        사업자번호 : 1447200097\n\n
        사업자형태 : 개인\n\n
        대표자명 : 조현욱\n\n
        이메일 : gdbagooni@gmail.com\n\n
        전화번호 : 031-377-8547\n\n
        주소 : 경기도 오산시 박동길 1, 2층\n\n
        통신판매업 신고번호 : 2019-경기오산-0003\n\n
상품 판매에 대한 환불, 민원 등은 에텔에서 처리하며 모든 책임은 에텔에 있습니다.\n\n
민원 담당자 : 이상현 / 연락처 : 010-3209-1559\n\n
Copyright © 2020 바구니.\n\n
        All rights reserved.</string>
    <string name="navi_1_myinfo">내 정보</string>
    <string name="navi_2_check_reservation">예약 확인</string>
    <string name="navi_3_myreview">나의 리뷰</string>
    <string name="navi_4_myspace">내가 본 공간</string>
    <string name="user_info">회원 정보</string>
    <string name="confirm">확인</string>
    <string name="edit">수정하기</string>
    <string name="center_page_1">공간을 담다에 대해 궁금하신 점을 문의해주세요.</string>
    <string name="center_plz_mail_us">bagooni@google.com 으로 문의 주시기 바랍니다.</string>
    <string name="center_page_2">문의 제목을 입력해주세요.</string>
    <string name="center_page_3">문의 내용을 입력해주세요.</string>
    <string name="center_page_4">답변 요청하기</string>
    <string name="center_page_5">문의내역</string>
    <string name="center_page_6">예약을 취소하고 싶어요.</string>
    <string name="center_page_7">예약일정을 변경할 수 있나요?</string>
    <string name="center_page_8">공간 주인과 연락하려면 어떻게 해야하나요?</string>
    <string name="center_page_answer_x">미답변</string>
    <string name="center_page_answer_o">답변완료</string>
    <string name="center_page1_1">회원가입</string>
    <string name="center_page1_2">예약하기</string>
    <string name="center_page1_3">촬영하기</string>
    <string name="center_page1_4">기타문의</string>
    <string name="center_page1_5">공담 이용자들이 자주 묻는 질문입니다.</string>
    <string name="center_page1_6">[회원가입]</string>
    <string name="center_page1_7">공간을 담다 회원이 되고 싶어요.</string>
    <string name="center_page1_8">가입시 사용했던 이메일 주소를 변경하시려면, 기존의 아이디 탈퇴요청 후 재가입 하셔야 합니다.\n\n회원탈퇴 후 기존 정보들은 모두 삭제됩니다.</string>
    <string name="center_page1_9">[예약하기]</string>
    <string name="reservation_confirm">예약확인</string>
    <string name="coming_reservation">다가올 예약</string>
    <string name="old_reservation">지나간 예약</string>
    <string name="cancel_and_refund">취소/환불내역</string>
    <string name="owner_checking_wait_a_second">공간 소유주가 확인중입니다.\n조금만 기다려주세요.</string>
    <string name="price_change_plz_adjust_agree">요금에 변동사항이 있습니다.\n \'요금 조정 동의\'후 결제가 진행됩니다.</string>
    <string name="owner_agree_payment_finish_plz">공간 소유주가 예약을 승인하였습니다.\n결제가 완료되면 예약이 확정됩니다.</string>
    <string name="reservation_finish_check_plz">예약이 완료되었습니다.\n공간의 주소와 예약시간을 꼭 확인해주세요.</string>
    <string name="refunding_now_check_plz">환불 요청 중입니다.\n환불예정금액을 확인해주세요.</string>
    <string name="space_use_finish">공간 사용을 완료하였습니다.</string>
    <string name="reservation_wait">예약 대기</string>
    <string name="reservation_adjust">예약 조정</string>
    <string name="payment_wait">결제 대기</string>
    <string name="review_manage">리뷰 관리</string>
    <string name="review_edit">리뷰 수정하기</string>
    <string name="review_delete">리뷰 삭제하기</string>
    <string name="cancel_in_english">Cancel</string>
    <string name="info2_1">개인정보 처리방침</string>
    <string name="info2_2">에텔(이하 \'회사\'라 한다)은 정보통신망이용촉진 및 정보보호 등에 관한 법률(이하 \'정보통신망법\') 등에 따라 회원님의 개인정보를 보호하고 이와 관련한 고충을 신속하고 원활하게 처리할 수 있도록 하기 위하여 다음과 같이 개인정보 취급방침을 수립 · 공개합니다.</string>
    <string name="info2_3">제 1조 (이용약관의 효력 및 변경)</string>
    <string name="info2_4">본 약관은 회원(에텔이 제공하는 서비스 공간을담다의 이용약관에 동의한 자를 말합니다. 이하 \"회원\"이라고 합니다.)이 에텔이 제공하는 공간을담다 온라인 중개 서비스(이하 \"서비스\"라 합니다)를 이용함에 있어 회사와 회원의 권리 · 의무 및 책임사항을 규정함을 목적으로 합니다.</string>
    <string name="info2_5">제 2조 (개인정보의 수집 항목 및 수집 방법)</string>
    <string name="info2_6">1. 회사는 일반회원 가입 시 아래와 같은 개인정보를 수집하고 있습니다.\n
1) 회원가입 시, 이름, 휴대전화번호, 이메일 주소를 수집합니다.\n
2) 예약 및 결제 과정에서 예약 정보(성명, 이메일 주소, 휴대전화번호)와 결제정보(신용카드 번호 및 은행계좌정보, 사업자등록번호 등)를 수집합니다.\n
3) 오너회원의 경우, 회원가입 직후 공간 정보 등록 과정에서 필수항목으로 대표자명, 이메일 주소, 휴대폰번호, 주소 등의 공간 정보와 유선전화번호, 계좌번호(은행 명, 계좌번호, 예금주)를 수집합니다.\n
4) 문의 접수 및 회신 과정에서 연락처 및 이메일 주소를 수집 할 수 있으며, 이벤트 진행 시 배송정보 등을 수집할 수 있습니다.\n
5) 서비스 이용 과정에서 IP주소, 쿠키, 방문 일시 · 불량 이용 기록, 기기 정보(PC/모바일) 정보가 자동으로 생성되어 수집합니다.\n
\n
2. 회사는 오너회원 가입 시 아래와 같은 개인정보를 수집하고 있습니다.\n
1) 공간 정보 등록 과정에서 필수항목으로 대표자명, 주소 등의 공간 정보와 유선전화번호, 계좌번호(은행 명, 계좌번호, 예금주)를 수집합니다.\n
2) 오너회원의 사업 형태의 따라, 사업자 등록증 또는 신분증과 통장사본을 결제 진행을 위해 수집합니다.\n
3) 서비스 이용 과정에서 IP주소, 쿠키, 방문 일시 ·불량 이용 기록, 기기 정보(PC/모바일) 정보가 자동으로 생성되어 수집합니다.\n
4) 문의 접수 및 회신 과정에서 연락처 및 이메일 주소를 수집 할 수 있으며, 이벤트 진행 시 배송정보 등을 수집할 수 있습니다.\n
\n
3. 개인정보의 수집 방법\n
1) 공간을담다 PC/모바일회원가입, 고객센터를 통한 유선 상담, 이메일을 통한 온라인 상담 등\n
2) 오프라인에서 진행되는 이벤트, 세미나 등</string>
    <string name="info2_7">제 3조(개인정보의 수집·이용목적)</string>
    <string name="info2_8">회사는 다음의 목적으로 서비스 제공을 위한 최소한의 개인정보만을 수집하며, 수집한 정보를 목적 외로 이용하거나, 회원의 동의 없이 외부에 공개하지 않습니다.\n
\n
– 회원관리: 회원제 서비스 제공에 따른 개인식별, 가입의사 확인, 이용약관 위반 회원에 대한 이용제한 조치, 가입 및 가입횟수 제한, 서비스 부정 이용 제재, 비인가 사용 방지, 만14세 미만 아동의 개인정보 수집 시 법정대리인의 동의 여부 확인, 추후 법정대리인 본인 확인, 고충 처리 및 분쟁 조정을 위한 기록 보존, 고지사항 전달, 회원탈퇴 의사의 확인\n
\n
– 신규서비스 개발 및 마케팅 광고의 활용: 신규서비스 개발 및 맞춤 서비스 제공, 인구통계학적 특성에 따른 서비스 제공 및 광고 게재, 서비스의 유효성 확인, 이벤트 · 광고성 정보 및 참여 기회 제공, 접속빈도 파악, 회원의 서비스 이용에 대한 통계</string>
    <string name="info2_9">제 4조(개인정보의 제공)</string>
    <string name="info2_10">회사는 회원의 개인정보를 사전 동의 없이 외부에 공개하거나 동의하지 않습니다. 다만, 회원이 사전에 제공에 동의한 경우, 법령의 규정에 의하여 법원 및 수사기관의 요구가 있는 경우에는 예외로 합니다.\n
또한 일반회원의 공간 예약 및 이용, 결제 및 환불처리 과정에서 아래와 같이 개인정보가 오너회원에게 제공됩니다.\n
\n
제공받는자 – 공간을담다 회원일체\n
제공항목 – 아이디, 이름, 연락처, 결제 정보, (결제방식 및 결제금액)\n
제공목적 – 공간 예약, 결제 및 환불처리\n
제공기간 – 서비스 제공 기간 (관계법령의 규정에 의하여 보존할 필요가 있는 경우 및 사전 동의를 득한 경우 해당 보유 기간)</string>
    <string name="info2_11">제 5조(개인정보의 제3자 제공)</string>
    <string name="info2_12">회사는 원활한 서비스 제공을 위하여 관련 정보를 필요 범위 내에서 아래 업체에게 제공합니다.\n
\n
취급위탁업체 – -\n
위탁업무 및 이용목적 – 전자결제대행\n
이용기간 – 회원탈퇴 시 혹은 위탁계약 종료 시까지</string>
    <string name="info2_13">제 6조 (회원의 권리·의무 및 행사방법)</string>
    <string name="info2_14">1. 회원 및 법정 대리인은 개인정보 관리책임자 및 담당자에게 언제든지 등록되어 있는 자신의 개인정보를 조회하거나 수정, 가입해지를 요청할 수 있습니다. 단, 이 경우 서비스의 일부 또는 전부의 이용이 어려울 수 있습니다.\n
\n
2. 회원님 및 법정대리인의 개인정보 조회, 수정은 회사의 개인정보관리책임자에게 서면, 전화, 전자우편 등을 통하여 하실 수 있으며 회사는 이에 대해 지체 없이 조치하겠습니다.\n
\n
3. 회원님께서 개인정보의 오류에 대한 정정을 요청하신 경우에는 정정을 완료하기 전까지 당해 개인정보를 이용 또는 제공하지 않습니다. 또한 잘못된 개인정보를 제3 자에게 이미 제공한 경우에는 정정 처리결과를 제3자에게 지체 없이 통지하여 정정이 이루어지도록 하겠습니다.</string>
    <string name="info2_15">제 7조(개인정보의 보유 및 이용기간)</string>
    <string name="info2_16">회사는 회원 탈퇴 등 개인정보 처리 목적이 달성되어 개인정보가 불필요하게 되었을 때에는 지체 없이 해당 개인정보를 파기합니다.\n
단, 관련 법령에 따라 일정기간 개인정보를 보관해야 할 수 있으며, 관련 법령에 따른 정보 보유 사유는 아래와 같습니다. 공간 예약 과정에서 결제 및 정산 발생 시 관련 법령에 따라 개인정보를 포함한 결제, 정산 관련 정보가 5년간 보관이 됩니다.\n
\n
– 전자상거래 등에서의 소비자 보호에 관한 법률\n
계약 또는 청약철회 등에 관한 기록: 5년\n
대금결제 및 재화 등의 공급에 관한 기록: 5년\n
소비자의 불만 또는 분쟁 처리에 관한 기록: 3년\n
\n
– 통신비밀보호법\n
로그인 기록: 3개월</string>
    <string name="info2_17">제 8조 (개인정보의 파기)</string>
    <string name="info2_18">회원탈퇴, 서비스 종료, 회원에게 동의 받은 개인정보 보유기간의 도래와 같이 개인정보의 수집 및 이용목적이 달성된 개인정보는 재생이 불가능한 방법으로 파기하고 있습니다. 전자적 파일 형태의 경우 복구 및 재생이 되지 않도록 기술적인 방법을 이용하여 안전하게 삭제하며, 출력물 등은 분쇄하거나 소각하는 방식 등으로 파기합니다.</string>
    <string name="info2_19">제 9조(쿠키의 설치/운영 및 거부에 관한 사항)</string>
    <string name="info2_20">1. 쿠키란?\n
– 회사는 개인화되고 맞춤화된 서비스를 제공하기 위해서 회원을 포함한 서비스 이용자(이하 \'이용자\')의 정보를 저장하고 수시로 불러오는 \'쿠키(cookie)\'를 사용합니다.\n
– 쿠키는 웹사이트를 운영하는데 이용되는 서버가 이용자의 브라우저에게 보내는 아주 작은 텍스트 파일로 이용자 컴퓨터의 하드디스크에 저장됩니다. 이후 이용자가 웹 사이트에 방문할 경우 웹 사이트 서버는 이용자의 하드 디스크에 저장되어 있는 쿠키의 내용을 읽어 이용자의 환경설정을 유지하고 맞춤화된 서비스를 제공하기 위해 이용됩니다.\n
– 쿠키는 개인을 식별하는 정보를 자동적/능동적으로 수집하지 않으며, 이용자는 언제든지 이러한 쿠키의 저장을 거부하거나 삭제할 수 있습니다.\n
\n
2. 회사의 쿠키 사용 목적\n
– 이용자들이 방문한 웹 페이지에 대한 방문 및 이용형태, 이용자 규모 등을 파악하여 이용자에게 최적화된 맞춤형 정보(광고 포함)를 제공하기 위해 사용합니다.\n
\n
3. 쿠키의 설치/운영 및 거부\n
– 이용자는 쿠키 설치에 대한 선택권을 가지고 있습니다. 따라서 이용자는 웹브라우저에서 옵션을 설정함으로써 모든 쿠키를 허용하거나, 쿠키가 저장될 때마다 확인을 거치거나, 아니면 모든 쿠키의 저장을 거부할 수도 있습니다.\n
– 다만, 쿠키의 저장을 거부할 경우에는 로그인이 필요한 일부 서비스는 이용에 어려움이 있을 수 있습니다.</string>
    <string name="info2_21">제 10조(개인정보의 기술적/관리적 보호조치)</string>
    <string name="info2_22">회사는 회원의 개인정보를 처리함에 있어 개인정보가 분실, 도난, 누출, 변조 또는 훼손되지 않도록 안전성 확보를 위하여 다음과 같은 기술적/관리적 대책을 강구하고 있습니다.\n
\n
1. 관리적 조치 : 내부관리계획 수립 · 시행, 정기적 직원 교육, 개인정보보호 전담 조직의 운영 등\n
2. 기술적 조치 : 개인정보처리시스템 등의 접근권한 관리, 접근통제시스템 설치, 고유식별정보 등의 암호화, 보안프로그램 설치\n
3. 물리적 조치 : 전산실, 자료 보관실 등의 접근통제</string>
    <string name="info2_23">제 11조(개인정보 관리책임자의 연락처)</string>
    <string name="info2_24">회원은 아래의 연락처로 개인정보보호 관련 민원을 개인정보 관리책임자 혹은 담당부서로 신고하실 수 있습니다.\n
        \n
개인정보 보호 책임자\n
\n
성명: 김민재\n
연락처: 010-3158-7555\n
이메일: gdbagooni@gmail.com\n
개인정보 보호 담당부서\n
부서명: 업무지원 본부\n
연락처: 010-3158-7555\n
이메일: gdbagooni@gmail.com\n
\n
기타 개인정보 침해에 대한 피해구제, 상담 등을 아래의 기관에 문의하실 수 있습니다.\n
(아래의 기관은 회사와는 별개의 기관으로서, 회사의 자체적인 개인정보 불만처리, 피해구제 결과에 만족하지 못하시거나 보다 자세한 도움이 필요하시면 문의하여 주시기 바랍니다.)\n
\n
– 개인정보침해신고센터 (privacy.kisa.or.kr / 국번없이 118 )\n
– 대검찰청 사이버수사과 (www.spo.go.kr / 국번없이 1301 )\n
– 경찰청 사이버안전국 (www.ctrc.go.kr / 국번없이 182 )</string>
    <string name="info2_25">제 12조(개인정보처리방침 변경 및 고지의무)</string>
    <string name="info2_26">1. 현 개인정보 처리방침은 정부의 정책 또는 회사의 필요에 의하여 변경될 수 있으며 내용의 추가 및 삭제, 수정이 있을 시에는 시행 7일 전에 홈페이지 또는 이메일을 통해 사전 공지하며 사전 공지가 곤란한 경우 지체 없이 공지하며, 이 정책은 공지한 날로부터 시행됩니다. 다만, 개인정보의 수집•이용 목적, 제3자 제공대상 등 중요한 사항이 추가 및 삭제, 수정되는 경우에는 30일 전에 사전 공지하고, 30일이 경과된 후에 시행됩니다. 또한 당사는 개인정보의 수집 및 활용, 제3자 제공 등 정보통신망 이용촉진 및 정보보호 등 에 관한 법률 등 관련 법령에 따라 고객의 별도 동의가 필요한 사항과 관련된 내용이 추가, 변경되는 경우에는 관련 법령에 따른 고객의 별도 동의를 받습니다.\n
\n
2. 이 개인정보처리방침은 2020.5.8부터 적용됩니다</string>
</resources>