<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PageLoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_page_layout_title"
        android:background="#001023"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="50dp">



        <TextView

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/gongGanEul_Damda"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:fontFamily="@font/nanumsquare_eb"
            android:gravity="center"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <EditText
        android:id="@+id/login_page_idET"
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:hint="@string/id"
        app:fontFamily="@font/nanumgothic"
        android:textSize="13.5sp"
        android:textColor="#777777"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:background="@drawable/style_borders_b5b5b5_13"
        android:layout_marginTop="40dp"
        android:paddingLeft="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_page_layout_title"/>


    <EditText
        android:id="@+id/login_page_pwET"
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:hint="@string/pwd"
        android:textColor="#777777"
        android:textSize="13.5sp"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:fontFamily="@font/nanumgothic"
        android:gravity="center_vertical"
        android:background="@drawable/style_borders_b5b5b5_13"
        android:layout_marginTop="15dp"
        android:paddingLeft="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_page_idET"/>


    <Button
        android:id="@+id/login_page_loginBtn"
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:textColor="#fff"
        android:text="@string/login"
        app:fontFamily="@font/nanumgothicbold"
        android:textSize="16sp"
        android:background="@drawable/style_button_rad10_bfbfbf_to_aaaaaa"
        style="?android:attr/borderlessButtonStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_page_pwET"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_page_layout_find_idpw_layout_dont_use"
        android:layout_width="310dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/login_page_loginBtn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <CheckBox
            android:id="@+id/login_page_still_login_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:paddingTop="0dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:paddingBottom="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:layout_width="61dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nanumgothic"
            android:textSize="11.5sp"
            android:textColor="#000"
            android:text="@string/still_login"
            android:layout_marginLeft="4dp"
            app:layout_constraintLeft_toRightOf="@id/login_page_still_login_checkBox"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>


        <Button
            android:id="@+id/login_page_find_id_btn"
            android:layout_width="61dp"
            android:layout_height="wrap_content"
            android:text="@string/find_id"
            android:textSize="12sp"
            android:textColor="#000"
            android:fontFamily="@font/nanumgothic"
            android:background="@android:color/transparent"
            android:layout_marginRight="16dp"
            style="?android:attr/borderlessButtonStyle"
            app:layout_constraintRight_toLeftOf="@id/login_page_find_pw_btn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
            android:id="@+id/login_page_find_pw_btn"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:text="@string/find_pw"
            android:textSize="12sp"
            android:textColor="#000"
            android:fontFamily="@font/nanumgothic"
            android:background="@android:color/transparent"
            style="?android:attr/borderlessButtonStyle"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--<com.kakao.usermgmt.LoginButton
        android:id="@+id/login_page_kakao_talk_login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login_page_layout_find_idpw_layout_dont_use"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>-->
    <Button
        android:id="@+id/login_page_kakao_talk_login_btn"
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:background="#f7e317"
        android:text="@string/cacao_talk_login"
        android:fontFamily="@font/nanumgothicbold"
        android:textColor="#000"
        android:textSize="12sp"
        style="?android:attr/borderlessButtonStyle"
        app:layout_constraintTop_toBottomOf="@id/login_page_layout_find_idpw_layout_dont_use"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />



    <Button
        android:id="@+id/login_page_naver_login_btn"
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:background="#1ec800"
        android:text="@string/naver_login"
        android:fontFamily="@font/nanumgothicbold"
        android:textColor="#fff"
        android:textSize="12sp"
        android:layout_marginTop="15dp"
        style="?android:attr/borderlessButtonStyle"
        app:layout_constraintTop_toBottomOf="@id/login_page_kakao_talk_login_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <!--<ImageButton
        android:id="@+id/login_page_naver_login_btn"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:scaleType="fitXY"
        android:src="@drawable/naver_login"
        android:layout_marginTop="15dp"
        style="?android:attr/borderlessButtonStyle"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        app:layout_constraintTop_toBottomOf="@id/login_page_cacao_talk_login_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_page_layout_sign_up"
        android:layout_marginTop="43dp"
        app:layout_constraintTop_toBottomOf="@id/login_page_naver_login_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/not_now_member"
            android:fontFamily="@font/nanumgothic"
            android:textSize="12sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/login_page_sign_up_btn"/>

        <Button
            android:id="@+id/login_page_sign_up_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="12sp"
            android:fontFamily="@font/nanumgothicbold"
            android:background="@android:color/transparent"
            style="?android:attr/borderlessButtonStyle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="370dp"
        android:layout_height="2dp"
        android:layout_marginTop="20dp"
        android:background="#626262"
        app:layout_constraintTop_toBottomOf="@id/login_page_layout_sign_up"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_page_layout_sign_up"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="50dp"
        android:text="@string/login_page_description1"
        android:textColor="#000"
        android:fontFamily="@font/nanumgothic"
        android:textSize="14sp"/>


    <ImageView
        android:layout_width="63dp"
        android:layout_height="82dp"
        android:background="@drawable/gongdam_logo_horizon_3x"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_page_layout_sign_up"
        android:layout_marginTop="50dp"
        android:layout_marginRight="46dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>